--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,40 @@
-:root .body {
-  background-color: #e5e5e5;
-  color: #212121;
+:root {
+  --primery-text-colour: #212121;
+  --text-color: #757575;
+  --acent: #2196f3;
+  --footer-tel-mail-colour: rgba(255, 255, 255, 0.6);
+  --logo-color: #000000;
+  --main-bg-color: #e5e5e5;
+  --section-team-bg-color: #f5f4fa;
+  --footer-bg-color: #2f303a;
+  --white: #ffffff;
+}
+.page {
+  color: var(primery-text-colour);
+  background-color: var(--main-bg-color);
 }
 .ul {
   list-style: none;
 }
 .logo .logo-main {
-  color: #2196f3;
+  color: var(--acent);
 }
 .logo-part {
-  color: black;
+  color: var(--primery-text-colour);
 }
-/* основные цвета h3 color: #212121; */
-/* h1 color: #FFFFFF;*/
-/* p color и телефона в хедере: #757575  */
-/* acent #2196F3
-/* футер адрес белій: мейл и телефон rgba(255, 255, 255, 0.6); */
-/* лого color: #000000;  #2196F3 */
-/* фон   футера и заголовка #2F303A; /*
-/* фон headerй #FFFFFF;/*
-/* background:основной #E5E5E5;*/
-/* background team #F5F4FA;*/
-/* card background #FFFFFF;*/
+.logo:hover {
+  color: var(--acent);
+}
+.logo:focus {
+  color: var(--acent);
+}
+.site-nav.link {
+  color: var(--primery-text-colour);
+}
+.site-nav.link:hover,
+link:focus {
+  color: var(--acent);
+}
+.nav-auth {
+  color: var(--text-color);
+}
