--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,22 @@ body {
   background-color: var(--main-bg-color);
   list-style: none;
   text-decoration: none;
+  font-weight: 400;
+  font-style: normal;
+  font-family: roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 /*header*/
 .header {
   background-color: var(--white);
+  /* logo*/
+}
+.logo {
+  font-family: raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2px;
 }
 .logo-main {
   color: var(--acent);
@@ -37,15 +48,24 @@ body {
 }
 /* site navigation*/
 .site-nav .link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   color: var(--primery-text-colour);
 }
 .site-nav .link:hover {
   color: var(--acent);
 }
-.site-nav .link:focus {
+.site-nav .link:focus,
+.link:active {
   color: var(--acent);
 }
 .nav-auth .link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   color: var(--text-color);
 }
 .nav-auth .link:hover {
@@ -56,21 +76,33 @@ body {
 }
 
 /* button*/
-.button {
-  color: var(--primery-text-colour);
-  background-color: var(--button-bck-color);
-}
+
 .button.primary {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
   color: var(--primery-text-colour);
   background-color: var(--button-bck-color);
 }
 
 .button.secondary {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
   color: var(--white);
   background-color: var(--acent);
 }
 .button.primary:focus,
 .button.primary:hover {
+  color: var(--white);
+  background-color: var(--acent);
+}
+.button.primary:active {
   color: var(--white);
   background-color: var(--acent);
 }
@@ -83,6 +115,12 @@ body {
   background-color: var(--footer-bg-color);
 }
 .hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
   color: var(--white);
 }
 .hero.button.secondary {
@@ -93,14 +131,28 @@ body {
   color: var(--acent);
   background-color: var(--white);
 }
-
+.hero .button.secondary:active {
+  color: var(--acent);
+  background-color: var(--white);
+}
 /*features*/
 
 .title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .subtitle {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.4;
 }
 .text {
+  font-size: 14px;
+  line-height: 1.71;
   color: var(--text-color);
 }
 .section-team {
@@ -111,10 +163,16 @@ body {
   color: var(--white);
   background-color: var(--footer-bg-color);
 }
-.logo {
+.footer .logo {
+  font-family: raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
   color: var(--white);
 }
 .adress-link {
+  font-size: 14px;
+  line-height: 1.71;
   color: var(--footer-tel-mail-colour);
 }
 .adress-link:hover,
