--- a/css/styles.css
+++ b/css/styles.css
@@ -10,15 +10,17 @@
   --white: #ffffff;
   --button-bck-color: #f5f4fa;
 }
-body {
+.body {
   color: var(--primery-text-colour);
   background-color: var(--main-bg-color);
-  list-style: none;
   text-decoration: none;
   font-weight: 400;
   font-style: normal;
   font-family: roboto, sans-serif;
   letter-spacing: 0.03em;
+}
+.list {
+  list-style: none;
 }
 
 /*header*/
@@ -31,6 +33,8 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2px;
+
+  text-decoration: none;
 }
 .logo-main {
   color: var(--acent);
@@ -53,6 +57,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primery-text-colour);
+  text-decoration: none;
+  list-style: none;
 }
 .site-nav .link:hover {
   color: var(--acent);
@@ -67,6 +73,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--text-color);
+  text-decoration: none;
 }
 .nav-auth .link:hover {
   color: var(--acent);
@@ -123,9 +130,10 @@ body {
   text-transform: uppercase;
   color: var(--white);
 }
-.hero.button.secondary {
+.hero. button.secondary {
   color: var(--white);
   background-color: var(--acent);
+  text-decoration: none;
 }
 .hero .button.secondary:hover {
   color: var(--acent);
@@ -169,11 +177,13 @@ body {
   font-size: 26px;
   line-height: 1.2;
   color: var(--white);
+  text-decoration: none;
 }
 .adress-link {
   font-size: 14px;
   line-height: 1.71;
   color: var(--footer-tel-mail-colour);
+  text-decoration: none;
 }
 .adress-link:hover,
 .adress-link:focus {
