--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@
   text-align: center;
   color: var(--primery-text-colour);
   background-color: var(--button-bck-color);
+  text-decoration: none;
 }
 
 .button.secondary {
@@ -103,6 +104,7 @@
   letter-spacing: 0.06em;
   color: var(--white);
   background-color: var(--acent);
+  text-decoration: none;
 }
 .button.primary:focus,
 .button.primary:hover {
@@ -131,6 +133,12 @@
   color: var(--white);
 }
 .hero.button.secondary {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
   color: var(--white);
   background-color: var(--acent);
   text-decoration: none;
@@ -143,34 +151,54 @@
   color: var(--acent);
   background-color: var(--white);
 }
-/*features*/
+/*особенности работы*/
 
 .title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .subtitle {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.4;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 .text {
   font-size: 14px;
   line-height: 1.71;
   color: var(--text-color);
 }
-.section-team {
+
+/*чем занимаються*/
+
+/*team*/
+
+.team {
   background-color: var(--section-team-bg-color);
 }
+.team-subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+}
+.team-text {
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  color: #757575;
+}
+
 /*futter*/
+
 .footer {
   color: var(--white);
   background-color: var(--footer-bg-color);
 }
+
 .footer .logo {
   font-family: raleway, sans-serif;
   font-weight: 700;
@@ -188,4 +216,21 @@
 .adress-link:hover,
 .adress-link:focus {
   color: var(--acent);
+}
+
+/*portfolio*/
+a {
+  text-decoration: none;
+}
+.portfolio .subtitle {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primery-text-colour);
+}
+.portfolio .text {
+  font-size: 16px;
+  line-height: 1.87;
+  color: #757575;
 }
